--- a/app/src/main/res/layout/todo_layout.xml
+++ b/app/src/main/res/layout/todo_layout.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.daimajia.swipe.SwipeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/todo_layout"
         android:layout_width="match_parent"
         android:layout_height="80dp">
