--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,10 @@
         <!-- Customize your theme here. -->
     </style>
 
+
+    <style name="ListMessageText" parent="Base.TextAppearance.AppCompat">
+        <!--<item name="android:textSize"></item>-->
+
+    </style>
+
 </resources>
