--- a/app/src/main/res/layout/view_todo.xml
+++ b/app/src/main/res/layout/view_todo.xml
@@ -20,8 +20,8 @@
             <!--What you want to show-->
             <Button
                 android:id="@+id/todo_del_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:background="@drawable/trash" />
         </LinearLayout>
         <!-- Bottom View End-->
