--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,6 +4,8 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?attr/actionBarSize">
+    android:background="@color/test"
+    android:minHeight="?attr/actionBarSize"
+    android:title="#fff">
 
 </android.support.v7.widget.Toolbar>
