--- a/app/src/main/res/layout/listitem_drawer.xml
+++ b/app/src/main/res/layout/listitem_drawer.xml
@@ -2,10 +2,12 @@
 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/textView"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="48dp"
     android:layout_gravity="center_vertical"
     android:padding="16dp"
     android:text="title"
+    android:textColor="#333"
     android:textSize="16sp"
+    android:gravity="center_horizontal"
     />
