--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
 <resources>
     <style name="MyTheme.Material" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/test</item>
-        <item name="colorPrimaryDark">@color/test</item>
+        <item name="colorPrimaryDark">@color/test_primary</item>
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
     </style>
