--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -16,7 +16,7 @@
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_gravity="center_vertical"
-            android:background="#228B22"/>
+            android:background="#00FF00"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -24,6 +24,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:textSize="15sp"
+            android:textColor="#708090"
             android:text="已完成"/>
 
         <Button
@@ -38,6 +39,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:textSize="15sp"
+            android:textColor="#708090"
             android:text="待完成"/>
     </LinearLayout>
 
