优化了评论列表，添加了匿名留言,欠分页

--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -5,12 +5,13 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:id="@+id/commentLinearLayout"
-    android:background="@drawable/card_bg">
+    android:background="#fff">
     <include layout= "@layout/toolbar"
         android:id="@+id/comment_actionbar"
         />
 
     <ListView
+        android:background="#fff"
         android:layout_marginTop="8dp"
         android:layout_below="@id/comment_actionbar"
         android:layout_height="wrap_content"
