--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,11 @@
 
     </style>
 
+    <style name="LightTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+    </style>
+
+
 
     <style name="ListMessageText" parent="Base.TextAppearance.AppCompat">
         <!--<item name="android:textSize"></item>-->
